Updated the run scripts

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ lib
 pom.xml
 target
 output.txt
+results-planetlab-20-100-09-100.json
+results-planetlab-20-100-09-100.csv
+results-artificial.json
+results-artificial.csv
