Added output of selected window sizes and best estimates, fixed the scripts

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ results-planetlab-20-100-09-100.json
 results-planetlab-20-100-09-100.csv
 results-artificial.json
 results-artificial.csv
+results-artificial-estimates.json
+results-artificial-estimates.csv
