Added an extra planetlab script for MHOD to match the lrr-1.1 otf

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ results-artificial.json
 results-artificial.csv
 results-artificial-estimates.json
 results-artificial-estimates.csv
+results-planetlab-20-100-09-100-extra.csv
+results-planetlab-20-100-09-100-extra.json
