Added another run script for lr vs mhod

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ results-artificial-estimates.json
 results-artificial-estimates.csv
 results-planetlab-20-100-09-100-extra.csv
 results-planetlab-20-100-09-100-extra.json
+results-planetlab-20-100-09-100-extra2.csv
+results-planetlab-20-100-09-100-extra2.json
