Added a run script for calculating the number of SLA violations

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ results-planetlab-20-100-09-100-extra.csv
 results-planetlab-20-100-09-100-extra.json
 results-planetlab-20-100-09-100-extra2.csv
 results-planetlab-20-100-09-100-extra2.json
+results-planetlab-20-100-09-100-violations.csv
+results-planetlab-20-100-09-100-violations.json
